--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18",
     "recharts": "^2.12.2",
     "web3": "^4.6.0"
+    
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -25,5 +26,20 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "postcss.config.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/afifatunalain/web3-dasboard-"
+  },
+  "keywords": [
+    "web3dashboard"
+  ],
+  "author": "alfifatiun",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/afifatunalain/web3-dasboard-/issues"
+  },
+  "homepage": "https://github.com/afifatunalain/web3-dasboard-#readme"
 }
